<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        style="@style/card_product"
        android:id="@+id/product">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_product_img"
                android:src="@drawable/kiwi"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/imgLoader"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:indeterminate="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_product"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="Kiwi"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                app:layout_constraintStart_toEndOf="@+id/img_product"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle_product"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="2 Variants"
                app:layout_constraintStart_toStartOf="@+id/title_product"
                app:layout_constraintTop_toBottomOf="@+id/title_product" />

            <ImageView
                android:id="@+id/btn_variants"
                style="@style/img_btn"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/desc_variants_drop_down"
                android:src="@drawable/ic_drop_down"
                app:layout_constraintBottom_toBottomOf="@+id/subtitle_product"
                app:layout_constraintStart_toEndOf="@+id/subtitle_product"
                app:layout_constraintTop_toTopOf="@+id/subtitle_product"
                app:tint="@color/black" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/variants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="44dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtitle_product"
                app:layout_constraintVertical_bias="0.333">

            </com.google.android.material.chip.ChipGroup>

            <ImageView
                android:id="@+id/btn_add"
                style="@style/img_btn"
                android:contentDescription="@string/desc_product_add"
                android:src="@drawable/ic_add__1_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grp_zero_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="btn_add" />

            <TextView
                android:id="@+id/quantity"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:text="0"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_add"
                app:layout_constraintEnd_toStartOf="@+id/btn_add"
                app:layout_constraintTop_toTopOf="@+id/btn_add" />

            <ImageView
                android:id="@+id/btn_remove"
                style="@style/img_btn"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/desc_remove_product"
                android:src="@drawable/ic_remove"
                app:layout_constraintBottom_toBottomOf="@+id/quantity"
                app:layout_constraintEnd_toStartOf="@+id/quantity"
                app:layout_constraintTop_toTopOf="@+id/quantity" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grp_non_zero_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="quantity,btn_remove" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="left"
                app:constraint_referenced_ids="btn_remove" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>